cpp/test/Slice/errorDetection/DataMemberRedefinition.err
DataMemberRedefinition.ice:14 error: redefinition of data member `member'
