cpp/test/Slice/errorDetection/DataMemberRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class C
{
    int member;
    int member;
};
